--- a/package.json
+++ b/package.json
@@ -1,46 +1,40 @@
 {
-  "name": "prelude-ls",
-  "version": "1.2.1",
-  "author": "George Zahariev <z@georgezahariev.com>",
-  "description": "prelude.ls is a functionally oriented utility library. It is powerful and flexible. Almost all of its functions are curried. It is written in, and is the recommended base library for, LiveScript.",
-  "keywords": [
-    "prelude",
-    "livescript",
-    "utility",
-    "ls",
-    "coffeescript",
-    "javascript",
-    "library",
-    "functional",
-    "array",
-    "list",
-    "object",
-    "string"
-  ],
-  "main": "lib/",
-  "files": [
-    "lib/",
-    "README.md",
-    "LICENSE"
-  ],
-  "homepage": "http://preludels.com",
-  "bugs": "https://github.com/gkz/prelude-ls/issues",
-  "license": "MIT",
+  "name": "estraverse",
+  "description": "ECMAScript JS AST traversal functions",
+  "homepage": "https://github.com/estools/estraverse",
+  "main": "estraverse.js",
+  "version": "5.3.0",
   "engines": {
-    "node": ">= 0.8.0"
+    "node": ">=4.0"
   },
+  "maintainers": [
+    {
+      "name": "Yusuke Suzuki",
+      "email": "utatane.tea@gmail.com",
+      "web": "http://github.com/Constellation"
+    }
+  ],
   "repository": {
     "type": "git",
-    "url": "git://github.com/gkz/prelude-ls.git"
-  },
-  "scripts": {
-    "test": "make test"
+    "url": "http://github.com/estools/estraverse.git"
   },
   "devDependencies": {
-    "livescript": "^1.6.0",
-    "uglify-js": "^3.8.1",
-    "mocha": "^7.1.1",
-    "browserify": "^16.5.1",
-    "sinon": "~8.0.1"
+    "babel-preset-env": "^1.6.1",
+    "babel-register": "^6.3.13",
+    "chai": "^2.1.1",
+    "espree": "^1.11.0",
+    "gulp": "^3.8.10",
+    "gulp-bump": "^0.2.2",
+    "gulp-filter": "^2.0.0",
+    "gulp-git": "^1.0.1",
+    "gulp-tag-version": "^1.3.0",
+    "jshint": "^2.5.6",
+    "mocha": "^2.1.0"
+  },
+  "license": "BSD-2-Clause",
+  "scripts": {
+    "test": "npm run-script lint && npm run-script unit-test",
+    "lint": "jshint estraverse.js",
+    "unit-test": "mocha --compilers js:babel-register"
   }
 }
