--- a/package.json
+++ b/package.json
@@ -3,10 +3,6 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "engines": {
-    "node": "18.x",
-    "npm": "9.x"
-  },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -16,15 +12,15 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^6.20.0",
-    "vite": "^4.4.5",
-    "@vitejs/plugin-react": "^4.0.3"
+    "react-router-dom": "^6.20.0"
   },
   "devDependencies": {
+    "@types/react": "^18.2.15",
+    "@types/react-dom": "^18.2.7",
+    "@vitejs/plugin-react": "^4.0.3",
     "autoprefixer": "^10.4.15",
     "postcss": "^8.4.29",
     "tailwindcss": "^3.3.3",
-    "@types/react": "^18.2.15",
-    "@types/react-dom": "^18.2.7"
+    "vite": "^4.4.5"
   }
 }
