--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,4 @@
 {
-  "buildCommand": "npm run build",
   "framework": "vite",
-  "outputDirectory": "dist"
+  "rewrites": [{ "source": "/(.*)", "destination": "/index.html" }]
 }
