--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,3 @@
-{
-  "routes": [
-    {
-      "handle": "filesystem"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/index.html"
-    }
-  ]
+﻿{
+    "version":  2
 }
