--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "NODE_ENV=production vite build",
+    "build": "npm run build:tailwind && vite build",
     "preview": "vite preview"
   },
   "engines": {
