Update vercel.json with explicit build settings

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,10 @@
 {
-  "buildCommand": "chmod +x build.sh && ./build.sh",
+  "version": 2,
+  "buildCommand": "npm run build",
+  "outputDirectory": "dist",
   "installCommand": "npm install",
   "framework": "vite",
-  "outputDirectory": "dist"
+  "rewrites": [
+    { "source": "/(.*)", "destination": "/index.html" }
+  ]
 }
